--- a/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
+++ b/src/app/modules/super-admin/register-admins/pages/register-admins/register-admins.component.html
@@ -17,37 +17,77 @@
           <div class="col-md-6">
             <div class="mb-3">
               <label for="cedula" class="form-label">Cédula</label>
-              <input type="text" class="form-control" id="cedula" name="cedula" [(ngModel)]="persona.cedula"/>
+              <input
+                type="text"
+                class="form-control"
+                id="cedula"
+                name="cedula"
+                [(ngModel)]="persona.cedula"
+              />
             </div>
           </div>
-          
-            <div class="mb-3">
-              <label for="nombre" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="persona.nombre" />
-            </div>
-        
+
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nombre"
+              name="nombre"
+              [(ngModel)]="persona.nombre"
+            />
+          </div>
         </div>
         <div class="mb-3">
           <label for="apellido" class="form-label">Apellido</label>
-          <input type="text" class="form-control" id="apellido" name="apellido" [(ngModel)]="persona.apellido" />
+          <input
+            type="text"
+            class="form-control"
+            id="apellido"
+            name="apellido"
+            [(ngModel)]="persona.apellido"
+          />
         </div>
         <div class="mb-3">
           <label for="fechaNacimiento" class="form-label"
             >Fecha de Nacimiento</label
           >
-          <input type="date" class="form-control" id="fechaNacimiento"  name="fecha_nacimiento" [(ngModel)]="persona.fecha_nacimiento" />
+          <input
+            type="date"
+            class="form-control"
+            id="fechaNacimiento"
+            name="fecha_nacimiento"
+            [(ngModel)]="persona.fecha_nacimiento"
+          />
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email"   name="email" [(ngModel)]="persona.email"/>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            [(ngModel)]="persona.email"
+          />
         </div>
         <div class="mb-3">
           <label for="direccion" class="form-label">Dirección</label>
-          <input type="text" class="form-control" id="direccion"  name="direccion" [(ngModel)]="persona.direccion" />
+          <input
+            type="text"
+            class="form-control"
+            id="direccion"
+            name="direccion"
+            [(ngModel)]="persona.direccion"
+          />
         </div>
         <div class="mb-3">
           <label for="sexo" class="form-label">Sexo</label>
-          <select class="form-select" id="sexo" name="sexo" [(ngModel)]="persona.sexo">
+          <select
+            class="form-select"
+            id="sexo"
+            name="sexo"
+            [(ngModel)]="persona.sexo"
+          >
             <option selected>Selecciona...</option>
             <option value="femenino">Femenino</option>
             <option value="masculino">Masculino</option>
@@ -55,7 +95,12 @@
         </div>
         <div class="mb-3">
           <label for="etnia" class="form-label">Etnia</label>
-          <select class="form-select" id="etnia"  name="etnia" [(ngModel)]="persona.etnia" >
+          <select
+            class="form-select"
+            id="etnia"
+            name="etnia"
+            [(ngModel)]="persona.etnia"
+          >
             <option selected>Selecciona...</option>
             <option value="mestizo">Mestizo</option>
             <option value="indigena">Indígena</option>
@@ -74,7 +119,8 @@
                 type="text"
                 class="form-control"
                 id="telefonoConvencional"
-                name="telefono" [(ngModel)]="persona.telefono"
+                name="telefono"
+                [(ngModel)]="persona.telefono"
               />
             </div>
           </div>
@@ -83,31 +129,93 @@
               <label for="telefonoCelular" class="form-label"
                 >Nro. de Teléfono Celular</label
               >
-              <input type="text" class="form-control" id="telefonoCelular" name="celular" [(ngModel)]="persona.celular" />
+              <input
+                type="text"
+                class="form-control"
+                id="telefonoCelular"
+                name="celular"
+                [(ngModel)]="persona.celular"
+              />
             </div>
           </div>
         </div>
         <div class="mb-3">
           <label for="inputSexo">Nivel de instruccion</label>
-              <select  id="inputSexo" class="form-control" name="nivelintruccion" [(ngModel)]="persona.nivelintruccion">
-                <option selected>Seleccione una opción...</option>
-                <option>Primaria</option>
-                <option>Secundaria</option>
-                <option>Bachiller</option>
-                <option>Tercer nivel</option>
-                <option>Cuarto Nivel</option>
-              </select>
+          <select
+            id="inputSexo"
+            class="form-control"
+            name="nivelintruccion"
+            [(ngModel)]="persona.nivelintruccion"
+          >
+            <option selected>Seleccione una opción...</option>
+            <option>Primaria</option>
+            <option>Secundaria</option>
+            <option>Bachiller</option>
+            <option>Tercer nivel</option>
+            <option>Cuarto Nivel</option>
+          </select>
         </div>
         <div class="mb-3">
           <label for="usuario" class="form-label">Usuario</label>
-          <input type="text" class="form-control" id="usuario"  name="username" [(ngModel)]="usuario.username" />
+          <input
+            type="text"
+            class="form-control"
+            id="usuario"
+            name="username"
+            [(ngModel)]="usuario.username"
+          />
         </div>
         <div class="mb-3">
           <label for="contrasena" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="contrasena"  name="password" [(ngModel)]="usuario.password" />
+          <input
+            type="password"
+            class="form-control"
+            id="contrasena"
+            name="password"
+            [(ngModel)]="usuario.password"
+          />
         </div>
-        <button  (click)="onSubmitGuardar()" type="submit" class="btn btn-primary">Crear</button>
+        <button
+          (click)="onSubmitGuardar()"
+          type="submit"
+          class="btn btn-primary"
+        >
+          Crear
+        </button>
       </form>
+    </div>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="successModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+      #successModal
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Éxito</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">Administrador creado correctamente.</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cerrar
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
