--- a/src/app/modules/docente-capacitador/register-mecanismo-eva/pages/register-mecanismo-eva/register-mecanismo-eva.component.html
+++ b/src/app/modules/docente-capacitador/register-mecanismo-eva/pages/register-mecanismo-eva/register-mecanismo-eva.component.html
@@ -5,6 +5,12 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
+              <label for="diseno">Diseño curricular:</label>
+              <select class="form-control" id="diseno" [(ngModel)]="mecanismoSeleccionado.mevDiseno.dcuId" name="diseno" (change)="mostrarDatosSeleccionados()">
+                <option *ngFor="let diseno of disenos" [value]="diseno.dcuId" [selected]="diseno.dcuId === mecanismoSeleccionado.mevDiseno.dcuId">{{ diseno.dcuTemastransversales }}</option>
+              </select>
+            </div>
+            <div class="form-group">
               <label for="mevDescripcion">Descripción</label>
               <textarea type="text" class="form-control" id="mevDescripcion" name="mevDescripcion"
                 [(ngModel)]="mecanismoSeleccionado.mevDescripcion" required></textarea>
@@ -28,7 +34,7 @@
         <tr>
           <th>#</th>
           <th>Descripción</th>
-          <th>Estado</th>
+          <th>Diseño Curricular</th>
           <th>Acciones</th>
         </tr>
       </thead>
@@ -37,9 +43,9 @@
           <tr *ngIf="mecanismo.mevDescripcion.toLowerCase().includes(filtro.toLowerCase())">
           <td>{{ mecanismo.mevId }}</td>
           <td>{{ mecanismo.mevDescripcion }}</td>
-          <td>{{ mecanismo.mevEstado ? 'Activo' : 'Inactivo' }}</td>
+          <td>{{ mecanismo.mevDiseno ? mecanismo.mevDiseno.dcuTemastransversales : '' }}</td>
           <td>
-            <button class="btn btn-primary"  onclick="scrollToTop()" (click)="editarMecanismo(mecanismo)">Editar</button>
+            <button class="btn btn-primary" (click)="editarMecanismo(mecanismo)">Editar</button>
             <button class="btn btn-danger" (click)="eliminarMecanismo(mecanismo.mevId)">Eliminar</button>
           </td>
           </tr>
