--- a/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
+++ b/src/app/modules/docente-capacitador/register-necesidad/pages/register-necesidad/register-necesidad.component.html
@@ -24,7 +24,7 @@
           <div class="">
         <h2 class="mb-3">1. Lugar donde se dictara</h2>
         <div class="mb-3">
-          <label  class="form-label"> Lugar donde se dictara</label>
+        
           <textarea
             rows="3"
             class="form-control"
@@ -43,13 +43,12 @@
 
      
           
-            <label  class="form-label">Participantes a ser inscritos</label>
+            <label  class="form-label">Numero de Participantes a ser inscritos</label>
         <input type="text"  name="ncuNumparticipantes" class="form-control"  [(ngModel)]="necesidad.ncuNumparticipantes" formControlName="ncuNumparticipantes" />
 
         
         <h2 class="mb-3">2. Resumen del proyecto y posible</h2>
         <div class="mb-3">
-          <label for="ncuResumenyproyecto" class="form-label">Resumen del proyecto y posible</label>
           <textarea    
             rows="3"
             class="form-control"
@@ -59,9 +58,9 @@
         </div>
 
 
-        <h2 class="mb-3">2. Poblacion a quien se encuentra dirigido</h2>
+        <h2 class="mb-3">3. Poblacion a quien se encuentra dirigido</h2>
         <div class="mb-3">
-          <label  class="form-label">Poblacion a quien se encuentra dirigido</label>
+          
           <textarea 
             rows="3"
             class="form-control"
